@@ -1416,6 +1416,133 @@ name|ParallelTermPositions
 argument_list|()
 return|;
 block|}
+comment|/**    * Checks recursively if all subreaders are up to date.     */
+DECL|method|isCurrent
+specifier|public
+name|boolean
+name|isCurrent
+parameter_list|()
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|readers
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+operator|!
+operator|(
+operator|(
+name|IndexReader
+operator|)
+name|readers
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+operator|)
+operator|.
+name|isCurrent
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+comment|// all subreaders are up to date
+return|return
+literal|true
+return|;
+block|}
+comment|/**    * Checks recursively if all subindexes are optimized     */
+DECL|method|isOptimized
+specifier|public
+name|boolean
+name|isOptimized
+parameter_list|()
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|readers
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+operator|!
+operator|(
+operator|(
+name|IndexReader
+operator|)
+name|readers
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+operator|)
+operator|.
+name|isOptimized
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+comment|// all subindexes are optimized
+return|return
+literal|true
+return|;
+block|}
+comment|/** Not implemented.    * @throws UnsupportedOperationException    */
+DECL|method|getVersion
+specifier|public
+name|long
+name|getVersion
+parameter_list|()
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"ParallelReader does not support this method."
+argument_list|)
+throw|;
+block|}
 DECL|method|doCommit
 specifier|protected
 name|void
