@@ -911,6 +911,446 @@ block|{
 comment|// expected exception
 block|}
 block|}
+DECL|method|testIsCurrent
+specifier|public
+name|void
+name|testIsCurrent
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir1
+init|=
+name|getDir1
+argument_list|()
+decl_stmt|;
+name|Directory
+name|dir2
+init|=
+name|getDir1
+argument_list|()
+decl_stmt|;
+name|ParallelReader
+name|pr
+init|=
+operator|new
+name|ParallelReader
+argument_list|()
+decl_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|pr
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|modifier
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir1
+argument_list|)
+decl_stmt|;
+name|modifier
+operator|.
+name|setNorm
+argument_list|(
+literal|0
+argument_list|,
+literal|"f1"
+argument_list|,
+literal|100
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// one of the two IndexReaders which ParallelReader is using
+comment|// is not current anymore
+name|assertFalse
+argument_list|(
+name|pr
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir2
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|setNorm
+argument_list|(
+literal|0
+argument_list|,
+literal|"f3"
+argument_list|,
+literal|100
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// now both are not current anymore
+name|assertFalse
+argument_list|(
+name|pr
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testIsOptimized
+specifier|public
+name|void
+name|testIsOptimized
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir1
+init|=
+name|getDir1
+argument_list|()
+decl_stmt|;
+name|Directory
+name|dir2
+init|=
+name|getDir1
+argument_list|()
+decl_stmt|;
+comment|// add another document to ensure that the indexes are not optimized
+name|IndexWriter
+name|modifier
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir1
+argument_list|,
+operator|new
+name|StandardAnalyzer
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Document
+name|d
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|d
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"f1"
+argument_list|,
+literal|"v1"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|TOKENIZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|addDocument
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|modifier
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir2
+argument_list|,
+operator|new
+name|StandardAnalyzer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|d
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|d
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"f2"
+argument_list|,
+literal|"v2"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|TOKENIZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|addDocument
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ParallelReader
+name|pr
+init|=
+operator|new
+name|ParallelReader
+argument_list|()
+decl_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|pr
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|pr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|modifier
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir1
+argument_list|,
+operator|new
+name|StandardAnalyzer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+name|modifier
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|pr
+operator|=
+operator|new
+name|ParallelReader
+argument_list|()
+expr_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir2
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// just one of the two indexes are optimized
+name|assertFalse
+argument_list|(
+name|pr
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|pr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|modifier
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir2
+argument_list|,
+operator|new
+name|StandardAnalyzer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|modifier
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+name|modifier
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|pr
+operator|=
+operator|new
+name|ParallelReader
+argument_list|()
+expr_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|pr
+operator|.
+name|add
+argument_list|(
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir2
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// now both indexes are optimized
+name|assertTrue
+argument_list|(
+name|pr
+operator|.
+name|isOptimized
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|pr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|queryTest
 specifier|private
 name|void
@@ -1082,7 +1522,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|// Fiels 1-4 indexed together:
+comment|// Fields 1-4 indexed together:
 DECL|method|single
 specifier|private
 name|Searcher
